www/public/static/css/main.css
table {
    border-collapse: collapse;
    border-spacing: 0;
}

body {
    margin-top: 1%;
    margin-left: 2%;
    margin-right: 2%;
    height: 800px;
    width: 96%;
    font-family:"MetaNormal";
}

.floatleft {
    display: flex 0px;
    float: left;
}

nav{
    background-color: skyblue;
    display: flex;
    justify-content: flex-end;
    margin-bottom: 10;
    /*width: 100%;
  justify-content: flex-end;*/
}

.padding {
    padding: 1%;
}

#filterlist {
    width: 18%;
    height: 95%;
    background-color: whitesmoke;
}


#calendar-window {
    position: right;
    width:80%;
    height: 100%;
    background-color: whitesmoke;
    /*border: 1px solid#d9d9d9;
        border-top: 0px; */
        
}

#calendar-bar{
    width: 100%;
    height: 7%;
    background-color: whitesmoke;
    border: 1px solid #d9d9d9;
        border-left: 1px;
        border-right: 0px;
        border-top: 0px;
}

.daynames{
    width: 100%;
    height: 5%;
    padding: 0%;
    margin: 0;
    overflow: auto;
    list-style: none;
    text-align: center;
}

.daynames_item{
    height: 5%;
    float: left;
    margin-right: 5%;
    margin-left: 5%;
}

.calendar-day-container{
    height: 100%;
    width: 14.0%;
    float: left;
    border: 1px solid #d9d9d9;
}

.calendar-day-number{
    height: 15%;
    width: 100%;
    
    

}

.calendar-day-data{
    width: 100%;
    height: 85%;
}

#current-month {
    font-color: black;
}

.week_row{
    height:17.6%;
    width: 100%;
        
}

input {
    height: 20px;
    width: 70px;
    margin-right: 5px;
}

h3 {
    text-align: center;
    vertical-align: middle;
    background: cream;
    line-height: 40px;
    height: 40px;
    margin: 0;
}

